--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,37 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# Log file
+logs/
+*.log
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+### SVN template
+.svn/
+
+### VisualStudioCode template
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+### macOS template
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+.idea/
+*.iml
